<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo_plantro"
            android:layout_width="71dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_plantro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_plantro" />

        <ImageView
            android:id="@+id/teks_plantro"
            android:layout_width="167dp"
            android:layout_height="46dp"
            android:contentDescription="@string/teks_plantro"
            app:layout_constraintTop_toTopOf="@id/logo_plantro"
            app:layout_constraintStart_toEndOf="@id/logo_plantro"
            app:layout_constraintHorizontal_bias="0.5"
            app:srcCompat="@drawable/teks_plantro" />

        <!-- Judul -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/title_menu_input"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/teks_plantro"/>

        <!-- Nitrogen -->
        <TextView
            android:id="@+id/nitrogenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/kadar_nitrogen"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nitrogenEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nitrogenTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nitrogenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan dalam bil. bulat (ex:84)"
                android:inputType="numberDecimal"
                android:ems="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Fosfor -->
        <TextView
            android:id="@+id/FosforTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/kadar_fosfor"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nitrogenEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FosforEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FosforTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/FosforEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan dalam bil. bulat (ex:84)"
                android:inputType="numberDecimal"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Potassium -->
        <TextView
            android:id="@+id/PotassiumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/kadar_kalium"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FosforEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PotassiumEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PotassiumTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PotassiumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan dalam bil. bulat (ex:84)"
                android:inputType="numberDecimal"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Suhu -->
        <TextView
            android:id="@+id/SuhuTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/suhu"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PotassiumEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SuhuEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SuhuTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SuhuEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan dalam bil. desimal (ex:24.0)"
                android:inputType="numberDecimal"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Kelembapan Tanah -->
        <TextView
            android:id="@+id/KelembapanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/kelembapan_tanah"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SuhuEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/KelembapanEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/KelembapanTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/KelembapanEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan dalam bil. desimal (ex:74.0)"
                android:inputType="numberDecimal"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- pH Tanah -->
        <TextView
            android:id="@+id/pHTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/ph_tanah"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/KelembapanEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pHEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pHTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pHEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan dalam bil. desimal (ex:7.1)"
                android:inputType="numberDecimal"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Curah Hujan -->
        <TextView
            android:id="@+id/CurahHujanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/curah_hujan"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pHEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CurahHujanEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CurahHujanTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CurahHujanEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan dalam bil. desimal (ex:500.0)"
                android:inputType="numberDecimal"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tombol Cari -->

        <!-- Hidden TextView untuk hasil -->
        <TextView
            android:id="@+id/soilQualityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBtn" />

        <TextView
            android:id="@+id/predictionCropText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soilQualityText" />

    <TextView
        android:id="@+id/confidenceText"
        android:layout_width="17dp"
        android:layout_height="6dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="44dp"
        android:text=""
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/predictionCropText" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:layout_editor_absoluteX="250dp"
            tools:layout_editor_absoluteY="846dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/checkBtn"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/green"
            android:text="Cari"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/tv_rainfall_notes"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_rainfall_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:background="@color/light_gray"
            android:gravity="center"
            android:padding="8dp"
            android:text="Note:\nYang diinput di bagian curah hujan \n0 - 100 : Rendah\n101 - 300 : Sedang\n301 - 500:Tinggi"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CurahHujanEditTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
